# nonebot-plugin-course-schedule

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
nonebot_plugin_course_schedule/: __init__.py  config.py
nonebot_plugin_course_schedule/commands/: bind_group.py  bind_schedule.py  group_schedule.py  show_today.py  weekly_ranking.py
nonebot_plugin_course_schedule/utils/: data_manager.py  date_parser.py  image_generator.py  profile_utils.py  reminder.py  session_utils.py
